--- a/jogotecadb/templates/lista.html
+++ b/jogotecadb/templates/lista.html
@@ -1,6 +1,11 @@
 {% extends "template.html" %}
 {% block conteudo %}
-        <table class="table table-striped table-responsive table-bordered">
+    
+    <a class="btn btn-primary" href="{{ url_for('login')}}">Login</a>
+    <a class="btn btn-danger" href="{{ url_for('logout')}}">Logout</a>
+    <a class="btn btn-primary" href="{{ url_for('novo')}}">Novo Jogo</a>
+
+    <table class="table table-striped table-responsive table-bordered">
             <thead class="thead-default">
                 <tr>
                     <th>Nome</th>
